--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-server",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "index.ts",
   "scripts": {
@@ -15,16 +15,14 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
-    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "node-fetch": "^3.3.2",
     "pg": "^8.11.5",
     "prettier": "^3.2.5",
+    "redis": "^4.6.13",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   }
 }
