--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "web-server",
   "version": "1.2.0",
   "description": "",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node index.ts"
+    "dev": "nodemon --exec ts-node index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.12.7",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
@@ -21,8 +24,6 @@
     "express": "^4.19.2",
     "pg": "^8.11.5",
     "prettier": "^3.2.5",
-    "redis": "^4.6.13",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "redis": "^4.6.13"
   }
 }
